# zero2prod

./: Cargo.toml
.cargo/: config.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subcriptions.rs
tests/: health_check.rs
