[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "zero2prod"
path = "src/main.rs"


[dependencies]
actix-web = "4.5.1"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.14.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
uuid = { version = "1.7.0", features = ["v4"] }


[target.x86_64-unknown-linux-gnu]
rustlfags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
